--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
- Theme Name:   Understrap Child
- Theme URI:    https://understrap.com
- Description:  Understrap Child Theme
- Author:       the Understrap Contributors
- Author URI:   https://github.com/understrap/understrap-child/graphs/contributors
+ Theme Name: Teta Theme DEV
+ Theme URI: https://wecode.swiss
+ Description:  Teta Theme developped by Wecode Geneva.
+ Author: Wecode
+ Author URI: https://wecode.swiss
  Template:     understrap
- Version:      1.2.0
+Version: [object Promise]
  License: GNU General Public License v2 or later
  License URI: http://www.gnu.org/licenses/gpl-2.0.html
- Text Domain:  understrap-child
+ Text Domain:  tetaz-dev
  Tags: one-column, custom-menu, featured-images, theme-options, translation-ready
- GitHub Theme URI: understrap/understrap-child
+ GitHub Theme URI: understrap/tetaz-dev
 */
